# newM

./: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CompareResult.c  README.md  bitconfig.c  eigen_calc.cpp  eigen_calc.h  main.c  main.cpp  pshell_pars.txt  readint.c  readsp.c  setup_TBME.c  sigint.c  sp_shell.c  sp_shell.h  t2pn.c  test.int  test1.snt  testRun.c
gogny/: A10Z4.int  A10Z5pn.int  A11Z5.int  A11Z5ex.int  A12Z6pn.int  A13Z5.int  A13Z5ex.int  A13Z5pn.int  A13Z6.int  A13Z6ex.int  A13Z6pn.int  A15Z7ex.int  A15Z7pn.int  A5Z2pn.int  A5Z3.int  A5Z3ex.int  A6Z2.int  A6Z2_D1N.int  A6Z2_D1S.int  A6Z2ex.int  A6Z2pn.int  A6Z3pn.int  A6Z4.int  A6Z4ex.int  A6Z4pn.int  A7Z2pn.int  A7Z3pn.int  A7Z4.int  A7Z4ex.int  A7Z4pn.int  A8Z2ex.int  A8Z2pn.int  A8Z3_D1M_hw16.45.int  A8Z3_D1N_hw18.25.int  A8Z3_D1S.int  A8Z3ex.int  A8Z3pn.int  A8Z4.int  A8Z4ex.int  A8Z4pn.int  (+7 more)
gogny-self-spe/: A10Z4ex.int  A10Z4pn.int  A10Z5.int  A10Z5ex.int  A11Z5pn.int  A11Z6.int  A11Z6ex.int  A11Z6pn.int  A12Z5.int  A12Z6ex.int  A14Z7.int  A14Z7ex.int  A14Z7pn.int  A15Z7.int  A15Z8.int  A15Z8ex.int  A15Z8pn.int  A6Z2ex.int  A6Z2pn.int  A6Z3.int  A6Z3ex.int  A7Z2.int  A7Z2ex.int  A7Z3.int  A7Z3ex.int  A8Z2.int  A8Z3.int  A8Z3pn.int  A9Z3.int  A9Z3ex.int  A9Z4.int  A9Z4pn.int  A9Z5.int
int/: A10Z5_45.int  A10Z5_45ex.int  A10Z5_45pn.int  A11Z5_45.int  A11Z5_45ex.int  A11Z6_45pn.int  A12Z6_45.int  A12Z6_45ex.int  A12Z6_45pn.int  A13Z6_45.int  A13Z6_45ex.int  A13Z6_45pn.int  A14Z7_45.int  A14Z7_45ex.int  A14Z7_45pn.int  A15Z7_45.int  A15Z7_45pn.int  A15Z8_45ex.int  A16Z8_45.int  A16Z8_45ex.int  (+52 more)
(+10006 files in other folders)
